[package]
name = "gqlient"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Common code for querying the GitHub GraphQL API"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
gh-token = "0.1.7"
indenter = "0.3.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "2.0.11"
ureq = { version = "2.9.7", features = ["json"] }

[lints]
workspace = true
