[package]
name = "gqlient"
edition.workspace = true
rust-version.workspace = true
description = "Common code for querying the GitHub GraphQL API"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gh-token = "0.1.7"
indenter = "0.3.3"
serde.workspace = true
serde_json.workspace = true
thiserror = "2.0.11"
ureq = { version = "3.0.5", features = ["json"] }

[lints]
workspace = true
