[package]
name = "orgs-with-issues"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Measure time to fetch open GitHub issues via GraphQL"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
gqlient = { path = "../gqlient" }
humantime = "2.1.0"
indoc = "2.0.5"
patharg = "0.4.0"
serde = { version = "1.0.200", features = ["derive"] }
serde-jsonlines = "0.7.0"
serde_json = "1.0.116"

[build-dependencies]
anyhow = "1.0.82"

[lints]
workspace = true
