[package]
name = "update-issues"
version = "0.1.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Attempt at efficiently fetching modified GitHub issue data via GraphQL"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
gh-token = "0.1.7"
gqlient = { path = "../gqlient" }
indenter = "0.3.3"
indoc = "2.0.5"
itertools = "0.12.1"
patharg = "0.4.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[lints]
workspace = true
